syntax = "proto3";
package isuxportal.proto.resources;
option go_package = "github.com/isucon/isucon10-portal/proto.go/isuxportal/resources";

import "google/protobuf/timestamp.proto";

message Contest {
  google.protobuf.Timestamp registration_opens_at = 1;
  google.protobuf.Timestamp registration_closes_at = 2;
  google.protobuf.Timestamp starts_at = 3;
  google.protobuf.Timestamp freezes_at = 4;
  google.protobuf.Timestamp ends_at = 5;

  enum Status {
    STANDBY = 0;
    REGISTRATION = 1;
    STARTED = 2;
    FINISHED = 3;
  }
  Status status = 6;
  bool frozen = 7;
}
