syntax = "proto3";
package isuxportal.proto.services.admin;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/services/admin";

import "isuxportal/resources/contestant_instance.proto";

message ListContestantInstancesQuery {
  // optional filter by team_id
  int64 team_id = 1;
}

message ListContestantInstancesResponse {
  repeated isuxportal.proto.resources.ContestantInstance contestant_instances =
      1;
}
